--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -1,32 +1,34 @@
-# This is a basic workflow that is manually triggered
-
 name: Manual workflow
 
-# Controls when the action will run. Workflow runs when manually triggered using the UI
-# or API.
 on:
   workflow_dispatch:
-    # Inputs the workflow accepts.
     inputs:
-      name:
-        # Friendly description to be shown in the UI instead of 'name'
-        description: 'country'
-        # Default value if no value is explicitly provided
+      country:
+        description: 'Country'
         default: ''
-        # Input has to be provided for the workflow to run
         required: true
-        # The data type of the input
         type: string
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "greet"
-  county:
-    # The type of runner that the job will run on
+  check_country:
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    # Runs a single command using the runners shell
-    - name: Send country
-      run: echo "Hello ${{ inputs.name }}"
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Create file with countries data
+      run: |
+        echo "tunis - Données de la Tunisie" > countries.txt
+        echo "france - Données de la France" >> countries.txt
+        echo "libiya - Données de la Libye" >> countries.txt
+        echo "amerique - Données de l'Amérique" >> countries.txt
+
+    - name: Check if country exists
+      run: |
+        country_input="${{ inputs.country }}"
+        if grep -q "^$country_input$" countries.txt; then
+          echo "Country $country_input exists"
+        else
+          echo "Country $country_input does not exist"
+        fi
