--- a/.github/workflows/company.yml
+++ b/.github/workflows/company.yml
@@ -28,6 +28,18 @@ jobs:
       id: show_company
       run: |
           ./company.sh > company_result.txt
+    - name: Search company in file
+      id: search_company
+      run: |
+        company_input="${{ inputs.company }}"
+        if grep -q "$company_input" company.sh; then
+          echo "Company $company_input exists"
+          echo "Company $company_input exists" > company_result.txt
+        else
+          echo "Company $company_input does not exist"
+          echo "Company $company_input does not exist" > company_result.txt
+          exit 1
+        fi
 
     - name: Upload company result
       uses: actions/upload-artifact@v2
