--- a/.github/workflows/company.yml
+++ b/.github/workflows/company.yml
@@ -27,8 +27,7 @@ jobs:
 
     - name: Show companies
       run: |
-        ./company.sh
-
+         bash company.sh
     - name: Search company in file
       id: search_company
       run: |
