--- a/.github/workflows/company.yml
+++ b/.github/workflows/company.yml
@@ -34,16 +34,15 @@ jobs:
       run: |
         company_input="${{ inputs.company }}"
         if grep -q "$company_input" company.sh; then
-          echo "Company $company_input exists" >  company-result.txt
+          echo "Company $company_input exists" > company-result.txt
         else
-          echo "Company $company_input does not exist" >  company-result.txt
+          echo "Company $company_input does not exist" > company-result.txt
           exit 1
         fi
 
     - name: Upload company result
-      if: steps.search_company.outcome == 'success'  # Upload result only if the search was successful
-    - name: Upload company result
+      if: steps.search_company.outcome == 'success'
       uses: actions/upload-artifact@v2
       with:
         name: company-result
-        path: company_result.txt
+        path: company-result.txt
