--- a/.github/workflows/testbranch.yml
+++ b/.github/workflows/testbranch.yml
@@ -13,16 +13,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Set up Ruby environment
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: 2.7.x
-
-      - name: Install dependencies
+      - name: Echo msg 
         run: |
-          gem install bundler
-          bundle install
+           echo "bonjour"
 
-      - name: Execute Rake task for specific company
-        run: RAILS_ENV=dev_it bundle exec rake "am:sqlite[${{ github.event.inputs.company }}]"
 
+     
