--- a/.github/workflows/testbranch.yml
+++ b/.github/workflows/testbranch.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   build:
-    if: github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'master'
+    if: github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'main'
     runs-on: self-hosted
 
     steps:
