--- a/.github/workflows/testbranch.yml
+++ b/.github/workflows/testbranch.yml
@@ -1,4 +1,4 @@
-
+name: Manual workflow
 
 on:
   pull_request:
@@ -15,7 +15,8 @@ jobs:
 
       - name: Echo msg 
         run: |
-           echo "bonjour"
+          echo "bonjour"
+
 
 
      
