--- a/.github/workflows/testbranch.yml
+++ b/.github/workflows/testbranch.yml
@@ -7,8 +7,7 @@ on:
 jobs:
   build:
     if: github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'main'
-    runs-on: self-hosted
-
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
