--- a/.github/workflows/testbranch.yml
+++ b/.github/workflows/testbranch.yml
@@ -1,4 +1,4 @@
-name: Manual workflow
+name: Merge to Main Workflow
 
 on:
   pull_request:
@@ -8,13 +8,10 @@ jobs:
   build:
     if: github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'main'
     runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
 
-      - name: Echo msg 
-        run: |
-          echo "bonjour"
+    steps:
+      - name: Say Hello
+        run: echo "Bonjour"
 
 
 
