--- a/.github/workflows/Workflow.yml
+++ b/.github/workflows/Workflow.yml
@@ -4,7 +4,7 @@ name: Test Workflow
 on:
   pull_request:
     branches:
-      - '*'
+      - 'main'
     types: [opened, reopened, synchronize]
 
 jobs:
