--- a/.github/workflows/Workflow.yml
+++ b/.github/workflows/Workflow.yml
@@ -15,6 +15,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Say Hello
-        run: echo "Bonjour"
+        run: echo "pull request"
 
       # Ajoutez ici les étapes pour exécuter votre pipeline de test
